Fix  et nettoyage code